# restreamer

./: .gitignore  Cargo.toml  obs.json
obs-rs/: Cargo.toml  build.rs  wrapper.h
obs-service/: Cargo.toml
obs-service/src/: hl.rs  main.rs
restream-cli/: Cargo.toml
restream-cli/src/: main.rs
rpc/: Cargo.toml  build.rs
rpc/proto/: obs.proto
rpc/src/: lib.rs
