[package]
name = "obs-service"
version = "0.1.0"
authors = ["Erik Gilling <konkers@konkers.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
obs = { path = "../obs-rs" }
rpc = { path = "../rpc" }
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tokio-stream = { version =  "0.1", features = ["net"] }
async-stream = "0.3"
tonic = { version = "0.4.0", features = ["tls"] }
x11 = { version = "2.18.2", features = ["glx", "xlib"] }