[package]
name = "rpc"
version = "0.1.0"
authors = ["Erik Gilling <konkers@konkers.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.4.0", features = ["tls"] }
prost = "0.7"

[build-dependencies]
tonic-build = { version = "0.4.0", features = ["prost"]  }